--- a/frontend/src/pages/login/Login.css
+++ b/frontend/src/pages/login/Login.css
@@ -7,5 +7,10 @@ body{
     justify-content: center;
     align-items: center;
 
-    background-color: #9693fd;
+    background: rgb(102,99,209);
+    background: linear-gradient(347deg, rgba(102,99,209,1) 40%, rgba(150,147,253,1) 75%, rgba(93,204,210,1) 98%);
+}
+
+.p-icon-field {
+    width: 100%;
 }
