--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,5 +1,11 @@
 
+.body-footer {
+
+    background-color: #dadada;
+}
+
 .footer {
-    background-color: #df8080;
-    padding: 10px;
+
+    background-color: #6366f1;
+    color: #EEEEEE;
 }
